added .vscode/ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+###  My rules ###
+.vscode/
+
 # Created by https://www.gitignore.io/api/macos,visualstudio
 # Edit at https://www.gitignore.io/?templates=macos,visualstudio
 
