--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ###  My rules ###
-.vscode/
+.vscode
 
 # Created by https://www.gitignore.io/api/macos,visualstudio
 # Edit at https://www.gitignore.io/?templates=macos,visualstudio
